# vulkrap

./: .gitignore  Cargo.toml  README.md  TODO  build_shaders.sh
examples/: dungeon_crawler.rs  hello_krap.rs  model.rs  terrain.rs  text_sbo.rs  text_sbo_offscreen.rs
examples/dungeon_crawler_example/: app.rs  mod.rs  movement.rs  scene.rs
examples/terrain_example/: mod.rs  scene.rs  terrain.rs  test_app.rs
resources/shaders/: 2d_flat_coloredtexturevertex_vert.spv  2d_flat_ssbo_vert.spv  2d_text_coloredtexturevertex_frag.spv  2d_text_coloredtexturevertex_vert.spv  2d_text_ssbo_vert.spv  2d_texture_push_vert.spv  2d_texture_ssbo_frag.spv  2d_texture_ssbo_vert.spv  crazy_triangle_vert.spv  dc_environ_frag.spv  dc_environ_vert.spv  default_ppl_frag.spv  default_ppl_vert.spv  example_hello_krap_frag.spv  example_hello_krap_vert.spv  flat_color_frag.spv  flat_color_vert.spv  flat_textured_frag.spv  flat_textured_vert.spv  simple_triangle_frag.spv  simple_triangle_vert.spv  terrain_frag.spv  terrain_vert.spv  text_coloredtexturevertex_frag.spv  text_coloredtexturevertex_vert.spv  text_frag.spv  text_vert.spv
src/: lib.rs  main.rs
src/console/: log.rs  logger.rs  mod.rs
src/engine/: camera.rs  console.rs  cvars.rs  datatypes.rs  entity.rs  game.rs  image.rs  math.rs  mesh.rs  mod.rs  renderstats.rs  runtime.rs  scene.rs  stats.rs  terrain.rs  ui.rs
src/game/: game.rs
src/log/: logger.rs
src/renderer/: buffer.rs  constants.rs  context.rs  datatypes.rs  debug.rs  entity.rs  image.rs  memory.rs  mod.rs  pass.rs  pipeline.rs  platform.rs  pushconstants.rs  queue.rs  rawarray.rs  stats.rs  surface.rs  swap_chain.rs  swapchain.rs  synchronization.rs  target.rs  texture.rs  types.rs  uniform.rs  vulkan_util.rs
src/shaders/: 2d_flat_coloredtexturevertex.vert  2d_flat_ssbo.frag  2d_flat_ssbo.vert  2d_text_coloredtexturevertex.vert  2d_text_ssbo.frag  2d_text_ssbo.vert  2d_texture_push.vert  2d_texture_ssbo.vert  crazy_triangle.vert  dc_environ.frag  dc_environ.vert  default_ppl.frag  default_ppl.vert  example_hello_krap.frag  example_hello_krap.vert  flat_color.frag  terrain.frag  (+9 more)
(+23 files in other folders)
