[package]
name = "vulkrap"
version = "0.1.0"
authors = ["Adam Andersson <geheaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
winit       = "0.24.0"
ash         = "0.33.2"
ash-window  = "0.7"
num         = "0.3.1"
stopwatch   = "0.0.7"
cgmath      = "0.18.0"
memoffset   = "0.6.1"
bitflags    = "1.2.1"
image       = "0.23.14"
rand        = "0.8.4"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }