[package]
name = "vulkrap"
version = "0.0.1"
authors = ["Adam Andersson <geheaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
winit       = "0.28.6"
ash         = "0.37.3"
ash-window  = "0.12.0"
raw-window-handle = "0.5.2"
num         = "0.4.1"
stopwatch   = "0.0.7"
cgmath      = "0.18.0"
memoffset   = "0.9.0"
bitflags    = "2.3.3"
image       = "0.24.6"
rand        = "0.8.5"
noise       = "0.8.2"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }